--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prestart": "test -f dist/cli.js || npm run build",
+    "start": "node dist/cli.js",
+    "dev": "ts-node src/cli.ts",
     "test": "npm run rawtest",
     "clean": "rimraf node_modules/@beenotung/tslib/index.* dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -35,7 +38,8 @@
   ],
   "dependencies": {
     "@beenotung/tslib": "^16.10.2",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "tslib": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "*",
